--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "main": "index.js",
   "scripts": {
     "format": "prettier --write *.js",
+    "dev": "nodemon index.js",
     "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "nodemon": "^3.0.2",
     "prettier": "^3.1.1"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "sqlite3": "^5.1.7"
   }
 }
